2003-12-22  Dale Johannesen  <dalej@apple.com>

        PR optimization/12828
        * loop.c:  Add find_regs_nested to look inside CLOBBER(MEM).
        (scan_loop):  Call it.
        * regclass.c (reg_scan_mark_regs):  Look inside CLOBBER(MEM).

2003-12-22  Andrew Pinski  <pinskia@physics.uc.edu>

	PR c/9163
	* c-decl.c (poplevel): Only set DECL_INITIAL of a current function
	if it is non-null.
	(finish_function): Check for error_mark_node or null on DECL_RESULT and
	DECL_RESULT of fndecl.
	(c_expand_body): Only expand when DECL_INITIAL of fndecl is not
	error_mark_node and not null.

2003-12-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* rtl.h (dump_rtx_statistics): Declare it.
	* rtl.c (rtx_alloc_counts, rtx_alloc_sizes, rtvec_alloc_counts,
	rtx_alloc_sizes): New static vars.
	(rtx_alloc, rtvec_alloc): Update them.
	(dump_rtx_statistics): New function.
	* toplev.c (finalize): Call it.
	* ggc-page.c (struct globals): Fix comments. Add new member
	total_allocated_per_order.
	(ggc_alloc): Keep track of the total allocated memory.
	(ggc_print_statistics): Clarify message. Print total allocated
	memory stats.
	* configure.in (gather-detailed-mem-stats): New flag.
	* configure: Regenerate.
	* config.in: Regenerate.
	* doc/install.texi (Configuration): Document 
	--enable-gather-detailed-mem-stats.

2003-12-22  Kazu Hirata  <kazu@cs.umass.edu>

	* system.h (CONVERT_HARD_REGISTER_TO_SSA_P): Poison.
	* config/i386/i386.h (CONVERT_HARD_REGISTER_TO_SSA_P): Remove.

2003-12-21  Roger Sayle  <roger@eyesopen.com>

	* config/ia64/hpux.h (TARGET_OS_CPP_BUILTINS): Define _ILP32
	when compiling in ILP32 mode.

2003-12-21  Andrew Pinski  <pinskia@physics.uc.edu>

	* config/rs6000/rs6000.c (rs6000_tls_referenced_p): Return early if
	TARGET_HAVE_TLS is false.

2003-12-21  Kazu Hirata  <kazu@cs.umass.edu>

	* config/ip2k/ip2k-protos.h: Remove the prototype for
	asm_output_section_name.
	* config/ip2k/ip2k.c (asm_output_section_name): Remove.
